force-app/main/default/objects/Session_Registration__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>Event_Registration__r.First_Name__c</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>