force-app/main/default/objects/Session_Registration__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>Event_Registration__r.Last_Name__c</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>