force-app/main/default/objects/Session_Registration__c/fields/Register_from_Waiting_List__c.field-meta.xml
<CustomField>
    <fullName>Register_from_Waiting_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For registering the session when in &apos;Waiting List&apos;</description>
    <label>Register from Waiting List</label>
    <type>Checkbox</type>
</CustomField>