force-app/main/default/objects/Session_Registration__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <formula>TEXT(Event_Registration__r.Registration_Type__c)</formula>
    <label>Registration Type</label>
    <type>Text</type>
</CustomField>