force-app/main/default/objects/Session_Registration__c/fields/Session_Reg_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Session_Reg_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to &apos;True&apos; when Confirmation Email is sent.</description>
    <label>Session Reg Email Sent</label>
    <type>Checkbox</type>
</CustomField>