force-app/main/default/objects/Session_Registration__c/fields/Session_Walk_In__c.field-meta.xml
<CustomField>
    <fullName>Session_Walk_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate that the session was registered during Event Walk In</description>
    <inlineHelpText>Checkbox to indicate that the session was registered during Event Walk In</inlineHelpText>
    <label>Session Walk In</label>
    <type>Checkbox</type>
</CustomField>