force-app/main/default/objects/Session_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting List</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Attended / Checked In</fullName>
            </value>
            <value>
                <fullName>Attended / Checked Out</fullName>
            </value>
            <value>
                <fullName>Did Not Attend</fullName>
                <color>#A845DC</color>
                <label>Did Not Attend</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#E27001</color>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Attending</fullName>
                <isActive>false</isActive>
                <label>Attending</label>
            </value>
            <value>
                <fullName>Checked In</fullName>
                <isActive>false</isActive>
                <label>Checked In</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>